--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     --neon-pink: #FF44CC;
     --neon-blue: #21F8F6;
     --neon-orange: #ef7700;
+    --neon-red: #aa132f;
     --fixed-navbar-height: 6rem
 }
 
@@ -36,6 +37,7 @@ a:hover.twitter {
 body {
     background-color: var(--background);
     color: var(--foreground);
+    font-family: 'Jura', sans-serif;
 }
 
 .card {
@@ -58,6 +60,9 @@ body {
 }
 .neon-purple {
     background-color: var(--neon-purple);
+}
+.neon-red {
+    background-color: var(--neon-red);
 }
 
 html {
@@ -87,9 +92,17 @@ html {
 #landing {
     background-color: var(--background);
 }
-
 #landing img {
     width: 50%;
+}
+#landing .hero-body {
+    padding: 0;
+}
+#landing .hero-body video {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    object-fit: cover;
 }
 #loading {
     width: 30%;
@@ -110,24 +123,7 @@ ul {
 /*    font-family: "Druk Wide Medium";*/
 /*}*/
 
-@media screen and (max-width: 1023px) {
 
-    .footer img {
-        height: 4rem;
-    }
-
-    /*.has-navbar-fixed-top {*/
-    /*    padding-top: 3.25rem !important;*/
-    /*}*/
-
-    /*html {*/
-    /*    scroll-padding-top: 2rem;*/
-    /*}*/
-
-    .navbar-item.is-spacer {
-        display: none;
-    }
-}
 
 .navbar {
     background-color: initial;
@@ -137,7 +133,10 @@ ul {
     text-transform: uppercase;
 }
 .navbar-brand img {
-    max-height: 2.5rem;
+    max-height: 2.75rem;
+}
+.navbar-burger {
+    height: 3.5rem;
 }
 .navbar-burger, .navbar-burger a:hover {
     color: var(--foreground) !important;
@@ -157,12 +156,6 @@ ul {
     background-color: initial;
 }
 
-.progress:indeterminate {
-    background-color: #1c1c1c;
-    background-image: linear-gradient(to right,var(--neon-primary) 30%,#1c1c1c 30%) !important;
-    box-shadow: 0 0 10px var(--neon-primary), 0 0 40px var(--neon-primary);
-}
-
 .glow {
     box-shadow: 0 0 10px var(--neon-primary), 0 0 40px var(--neon-primary);
 }
@@ -175,6 +168,10 @@ ul {
 .glow-green {
     box-shadow: 0 0 10px var(--neon-green), 0 0 40px var(--neon-green);
 }
+.glow-red {
+    box-shadow: 0 0 10px var(--neon-red), 0 0 40px var(--neon-red);
+}
+
 
 .section .title {
     font-family: "Druk Wide Medium";
@@ -191,20 +188,17 @@ ul {
     min-height: 100vh;
 }
 #site .hero-body {
-    padding: 0;
-}
-/*#site .hero-body video {*/
-/*    width: 100%;*/
-/*    height: 100vh;*/
-/*    position: absolute;*/
-/*    object-fit: cover;*/
-/*}*/
-
-#site .hero-body {
     background-image: url('/assets/header.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+#site .hero-body .title {
+    font-family: "Druk Wide Medium";
+    font-size: 4rem !important;
+    margin-top: auto;
+    text-transform: uppercase;
+    text-shadow: 0 0 10px var(--neon-primary), 0 0 20px var(--neon-primary);
 }
 
 .subtitle {
@@ -226,8 +220,14 @@ ul {
     color: var(--foreground);
 }
 
+.timeline-marker {
+    background-color: var(--neon-primary) !important;
+    box-shadow: 0 0 10px var(--neon-primary), 0 0 40px var(--neon-primary);
+    border-color: var(--neon-primary) !important;
+}
 .timeline .tag {
     background-color: var(--neon-primary) !important;
+    box-shadow: 0 0 10px var(--neon-primary), 0 0 40px var(--neon-primary);
     color: white;
 }
 .timeline-content .heading {
@@ -240,18 +240,49 @@ ul {
 .timeline-item {
     padding-bottom: 0 !important;
 }
-.timeline-item.is-last {
-    padding-bottom: 1em !important;
-}
+
+
 .timeline-item::before {
     background-color: var(--neon-primary) !important;
+    box-shadow: 0 0 10px var(--neon-primary), 0 0 40px var(--neon-primary), 0 0 80px var(--neon-primary);
 }
-.timeline-marker {
-    background-color: var(--neon-primary) !important;
-    border-color: var(--neon-primary) !important;
+.timeline-phase {
+    display: flex;
+    flex-direction: column;
 }
-
+.timeline-phase .timeline-item:nth-of-type(1) .timeline-marker {
+    top: 1.5em !important;
+}
+.timeline-phase .timeline-item:nth-of-type(1) .timeline-content {
+    padding-top: 1.5em !important;
+}
+.timeline-phase .timeline-item:last-child {
+    padding-bottom: 1.5em !important;
+}
 
 .title {
     color: var(--foreground);
+}
+
+@media screen and (max-width: 1023px) {
+
+    .footer img {
+        height: 4rem;
+    }
+
+    /*.has-navbar-fixed-top {*/
+    /*    padding-top: 3.25rem !important;*/
+    /*}*/
+
+    /*html {*/
+    /*    scroll-padding-top: 2rem;*/
+    /*}*/
+
+    .navbar-item.is-spacer {
+        display: none;
+    }
+
+    #site .hero-body .title {
+        font-size: 2.5rem !important;
+    }
 }
